<resources>
    <string name="app_name">xRenovation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="map">Map</string>
    <string name="signupbyemail_text">Sign Up By Email</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up_error">Registration error occurred :(</string>
    <string name="sign_up_error_email_exists">This email is already being used</string>
    <string name="sign_up_error_many_attempts">Too many attempts, try again later</string>
    <string name="verification_email_sent">Verification email has been sent</string>
    <string name="email_not_found">Can\'t find the email?</string>
    <string name="email_not_found_text">1) Make sure that the correct email address was entered during registration. If an incorrect email address was specified during registration, create an account with a new email address.\n2) Check the \"Spam\" folder on your mail, it is likely that the email may end up there.</string>
    <string name="ok">OK</string>
    <string name="incorrect_email">Incorrect Email format</string>
    <string name="different_passwords">The passwords are different</string>
    <string name="weak_password">The password must be at least 6 characters long</string>
    <string name="sign_up_exception">Registration error, please try again later</string>
    <string name="user_not_found">Couldn\'t find user associated with this email</string>
    <string name="invalid_id_token">Invalid id token</string>
    <string name="sign_in_with_email">Sign In with email</string>
    <string name="button_sign_in">Sign In</string>
    <string name="already_signed_up">Already signed up?</string>
    <string name="editTextPersonName">Name</string>
    <string name="enter_name_textview">Welcome to xRenovation! \n Enter your name, please</string>
    <string name="button_enter_name">Enter</string>
    <string name="hi_someone">Hi,\u0020</string>
    <string name="button_send_email_verification">Send email</string>
    <string name="email_verified">Email verified</string>
    <string name="email_not_verified">Email not verified</string>
    <string name="get_account_info_error">Error, please try again :(</string>
    <string name="missing_refresh_token_error">Log into yor account or sign up</string>
    <string name="token_expired_error">Log into yor account</string>
    <string name="user_not_found_error">User not found</string>
    <string name="log_out">Log out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialog_log_out">Log out?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="code">Code</string>
    <string name="password_reset">Reset password</string>
    <string name="password_reset_email_sent">Password reset email sent</string>
    <string name="password_reset_email_error">Error occurred during password reset :(</string>
    <string name="enter_email_textview">Enter your email</string>
    <string name="picture_not_uploaded">Couldn\'t upload picture, please try again :(</string>
    <string name="error_try_again">Error occurred, please try again :(</string>
    <string name="set_account_info_error">Error occurred, please try again :(</string>
    <string name="invalid_password">Wrong password, please try again</string>
    <string name="wrong_email_or_password">Wrong email or password</string>
    <string name="email_is_empty">Enter email, please</string>
    <string name="password_is_empty">Enter password, please</string>
    <string name="no_network_try_again">No network, please try again</string>
    <string name="try_again">Try again</string>
    <string name="add_house">Add house</string>
    <string name="address">Address</string>
    <string name="moscow">Москва</string>
    <string name="nao">Новомосковский административный округ</string>
    <string name="tao">Троицкий административный округ</string>
    <string name="zelenograd">Зеленоград</string>
    <string name="pos_akulovo">посёлок Акулово</string>
    <string name="der_tolstop">деревня Толстопальцево</string>
    <string name="pos_tolstop">посёлок Толстопальцево</string>
    <string name="pos_rublevo">посёлок Рублёво</string>
    <string name="pos_vnukovo">посёлок Внуково</string>
    <string name="cfo">Центральный федеральный округ</string>
    <string name="not_moscow">This address doesn\'t belong to Moscow</string>
    <string name="ready">Ready</string>
    <string name="number_of_floors">Number of floors</string>
    <string name="floors">Floors</string>
    <string name="variable_floors">Variable floors</string>
    <string name="number_of_flats">Number of flats</string>
    <string name="flats">Flats</string>
    <string name="construction_year">Year of construction</string>
    <string name="year">Year</string>
    <string name="description">Description</string>
    <string name="photos">Photos</string>
    <string name="links">Links</string>
    <string name="add_url">Add URL</string>
    <string name="cancel">Cancel</string>
    <string name="no_address_selected">Enter address</string>
    <string name="incorrect_address">The address inside input field doesn\'t match with the actual address</string>
    <string name="no_floors_entered">Enter the number of floors</string>
    <string name="no_flats_entered">Enter the number of flats</string>
    <string name="no_year_entered">Enter the construction year</string>
    <string name="no_description_added">The description is too short</string>
    <string name="no_photos_selected">Select at least 1 photo</string>
    <string name="no_house_in_address">The address doesn\'t have a house</string>
    <string name="house_added">The house is being moderated</string>
    <string name="send_comment">Send</string>
    <string name="leave_comment">Leave comment here</string>
    <string name="comments">Comments</string>
    <string name="suggest_house_correction">Suggest correction or report a violation</string>
    <string name="correction_added">Added successfully</string>
    <string name="correction_too_short_error">The text must be at least 20 symbols long</string>
    <string name="correction_too_long_error">The text must be less 150 symbols long</string>
    <string name="report_added">Report added successfully</string>
    <string name="post_timeout_house">Time limit reached, upload your house later, please</string>
    <string name="post_timeout_comment">Time limit reached, add your comment later, please</string>
    <string name="post_timeout_correction">Time limit reached, try again later, please</string>
    <string name="user_not_logged_in">Log into yor account or sign up</string>
    <string name="comment_under_moderation">The comment is under moderation</string>
    <string name="failed_to_send_comment">Failed to send comment</string>
    <string name="no_comments">No comments yet</string>
    <string name="short_comment">Should be at least 10 symbols</string>
    <string name="long_comment">Should be less than 80 symbols</string>
    <string name="failed_to_upload_photos">Failed to upload photos</string>
    <string name="continue_to_xrenovation">Continue</string>
    <string name="welcome_text">Welcome to xRenovation!\n\n
    This is a place where you can discuss and add houses built under the renovation program, as well as suggest corrections to already added houses.\n
    The rules are simple:\n\n
    1) Suggested houses must be either built or under construction as part of the renovation program. The house information must be accurate. Spam is strictly prohibited. If the information is incorrect, the administration may refuse to add the house to the map or correct it.\n\n
    2) Comments must be related to a specific house and nothing else. Spam is strictly prohibited. The administration may choose not to publish a comment if it does not meet this requirement.\n\n
    3) Suggested corrections must be related to a specific house and nothing else. Spam is strictly prohibited. The administration may reject them if they do not meet this requirement.\n\n
    4) In case of repeated violations of rules 1, 2, or 3, the user may be blocked, and content may be removed.\n\n
    5) The publication of the following content is prohibited:\n\n
    - Sexually explicit content\n
    - Content involving child abuse, exploitation, sexualization of children, sexual extortion, or child trafficking\n
    - Profanity or obscene language\n
    - Hate speech against any groups of people\n
    - Calls for violence\n
    - Justification of terrorism or calls for terrorist acts\n
    - Promotion of destructive ideologies\n
    - Mockery of or profiting from confidential events\n
    - Threats, harassment, bullying, or intimidation\n
    - Advertising or sale announcements\n
    - Any illegal activity\n
    - Personal or confidential information (e.g., phone numbers, emails, exact owner details)\n
    - Any content that violates Google Play policies\n\n
    If rule 5 is violated, the content will be removed, and the user will be blocked.\n\n
    6) By clicking the \"Continue\" button, you agree to the above rules.</string>
    <string name="request_account_and_data_deletion">Request account and data deletion</string>
    <string name="request_account_and_data_deletion_title">Request account and data deletion?</string>
    <string name="request_account_and_data_deletion_message">A request for account and data deletion will be created!</string>
    <string name="refresh_account_screen">Please refresh account info screen and try again</string>
    <string name="report_comment_violation">Report comment or user</string>
    <string name="photopicker_exception">Exception occurred. Try updating phone or google play services.</string>
</resources>