<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/accountFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.AccountFragment">

    <TextView
        android:id="@+id/textView2"
        style="@style/HouseHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/signupbyemail_text"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/editTextEmailSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext_background_drawable"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="50dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPasswordSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editTextPasswordSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext_background_drawable"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="50dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPasswordConfirmSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailSignUp" />

    <EditText
        android:id="@+id/editTextPasswordConfirmSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittext_background_drawable"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:minHeight="50dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSignUpByEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordSignUp" />

    <com.dd.CircularProgressButton
        android:id="@+id/buttonSignUpByEmail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        app:cpb_colorIndicator="@color/cyan"
        app:cpb_cornerRadius="25dp"
        app:cpb_selectorIdle="@drawable/cpb_selector"
        app:cpb_textIdle="@string/button_sign_up"
        app:layout_constraintBottom_toTopOf="@+id/textView_already_signed_up"
        app:layout_constraintEnd_toEndOf="@+id/editTextPasswordConfirmSignUp"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordConfirmSignUp"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordConfirmSignUp" />

    <TextView
        android:id="@+id/textView_already_signed_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/already_signed_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignUpByEmail" />
</androidx.constraintlayout.widget.ConstraintLayout>