<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_add_house_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.RoutingFragment">


        <TextView
            android:id="@+id/textView_house_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/add_house"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/address"
            android:singleLine="true"
            android:minHeight="50dp"
            android:background="@drawable/edittext_background_drawable"
            app:layout_constraintEnd_toStartOf="@+id/imageView_address_location"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_house_address" />

        <ImageView
            android:id="@+id/imageView_address_location"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/baseline_location_on_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_house_address" />

        <TextView
            android:id="@+id/textView_number_of_floors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/number_of_floors"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView" />

        <EditText
            android:id="@+id/editText_number_of_floors"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/floors"
            android:importantForAutofill="no"
            android:inputType="number"
            android:singleLine="true"
            android:minHeight="50dp"
            android:background="@drawable/edittext_background_drawable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_number_of_floors" />

        <CheckBox
            android:id="@+id/checkBox_variable_floors"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/variable_floors"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/editText_number_of_floors"
            app:layout_constraintTop_toBottomOf="@+id/textView_number_of_floors" />

        <TextView
            android:id="@+id/textView_number_of_flats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/number_of_flats"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_number_of_floors" />

        <EditText
            android:id="@+id/editText_number_of_flats"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/flats"
            android:inputType="number"
            android:maxLength="4"
            android:minHeight="50dp"
            android:background="@drawable/edittext_background_drawable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_number_of_flats" />

        <TextView
            android:id="@+id/textView_construction_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/construction_year"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_number_of_flats" />

        <EditText
            android:id="@+id/editText_construction_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/year"
            android:inputType="number"
            android:maxLength="4"
            android:minHeight="50dp"
            android:background="@drawable/edittext_background_drawable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_construction_year" />

        <TextView
            android:id="@+id/textView_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_construction_year" />

        <EditText
            android:id="@+id/editText_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:ems="10"
            android:hint="@string/description"
            android:scrollbars="vertical"
            android:isScrollContainer="true"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="8"
            android:minLines="1"
            android:singleLine="false"
            android:minHeight="50dp"
            android:background="@drawable/edittext_background_drawable"
            android:nestedScrollingEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_description" />

        <TextView
            android:id="@+id/textView_photos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/photos"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText_description" />

        <ImageView
            android:id="@+id/imageView_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/baseline_add_circle_outline_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_photos" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_chosen_photo"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:nestedScrollingEnabled="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView_add_button"
            app:layout_constraintTop_toBottomOf="@+id/textView_photos" />

        <TextView
            android:id="@+id/textView_links"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/links"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerview_chosen_photo" />

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/scrollview_chip_group"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_links">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_links"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_links"
                app:singleLine="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_add_url"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/add_url">

                </com.google.android.material.chip.Chip>

            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>


        <com.dd.CircularProgressButton
            android:id="@+id/button_add_house"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:cpb_colorIndicator="@color/cyan"
            app:cpb_cornerRadius="25dp"
            app:cpb_selectorIdle="@drawable/cpb_selector"
            app:cpb_textIdle="@string/send_comment"
            app:layout_constraintBottom_toTopOf="@+id/space_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scrollview_chip_group" />


        <Space
            android:id="@+id/space_bottom"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>

