<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/enter_email_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.EnterEmailFragment">

    <TextView
        android:id="@+id/textView3"
        style="@style/HouseHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/enter_email_textview"
        app:layout_constraintBottom_toTopOf="@+id/editText_email_password_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_email_password_reset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/edittext_background_drawable"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="50dp"
        app:layout_constraintBottom_toTopOf="@+id/editText_code_and_password_reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/editText_code_and_password_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/code"
        android:inputType="textPassword"
        android:visibility="gone"
        android:minHeight="50dp"
        android:background="@drawable/edittext_background_drawable"
        app:layout_constraintBottom_toTopOf="@+id/button_send_password_reset_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_email_password_reset" />

    <com.dd.CircularProgressButton
        android:id="@+id/button_send_password_reset_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        app:cpb_colorIndicator="@color/cyan"
        app:cpb_cornerRadius="25dp"
        app:cpb_selectorIdle="@drawable/cpb_selector"
        app:cpb_textIdle="@string/button_send_email_verification"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_code_and_password_reset" />

</androidx.constraintlayout.widget.ConstraintLayout>